-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
It is not always advantageous to bind the various server service threads to specific CPTs. If all or most traffic is coming in from one node (likely a router), then activity on the server ends up limited to the CPT associated with that router. This is advantageous if NUMA latencies are relatively high, but can be disadvantageous if CPTs are small and latencies are low.
Specifically, the work is limited to the CPUs in the CPT, which means that some workloads can end up needing more CPU, but are unable to get it.
In essence, the default behavior of strict binding is fine but is not always preferable. So, add an option to disable this strict binding.
- is related to
-
LU-14676
Better hash distribution to different CPTs when LNET router is exist
-
- Resolved
-